Fixed endpoint security docs
