# backend/openapi.yaml
@@ -232,18 +232,18 @@ paths:
               $ref: "#/components/schemas/UserRegisterRequestDto"
         required: true
       responses:
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/PublicValidationErrorDto"
         "200":
           description: Ok
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/AccessTokenResponseDto"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PublicValidationErrorDto"
         "500":
           description: Internal server error
           content:
@@ -525,6 +525,7 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/PageResponseDtoWorldRegionResponseDto"
+      security: []
   /world-regions/{id}:
     get:
       tags:
@@ -544,6 +545,7 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/WorldRegionResponseDto"
+      security: []
   /hotels:
     get:
       tags:
@@ -582,6 +584,7 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/PageResponseDtoHotelResponseDto"
+      security: []
   /hotels/{id}:
     get:
       tags:
@@ -601,6 +604,7 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/HotelResponseDto"
+      security: []
   /hotels/rooms:
     get:
       tags:
@@ -650,6 +654,7 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/PageResponseDtoRoomResponseDto"
+      security: []
   /hotels/rooms/{id}:
     get:
       tags:
@@ -669,6 +674,7 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/RoomResponseDto"
+      security: []
   /countries:
     get:
       tags:
@@ -701,6 +707,7 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/PageResponseDtoCountryResponseDto"
+      security: []
   /countries/{id}:
     get:
       tags:
@@ -720,6 +727,7 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/CountryResponseDto"
+      security: []
 components:
   schemas:
     WorldRegionEditRequestDto:
@@ -815,6 +823,11 @@ components:
           enum:
           - TRAVELER
           - HOTEL_OWNER
+    AccessTokenResponseDto:
+      type: object
+      properties:
+        accessToken:
+          type: string
     PublicValidationErrorDto:
       type: object
       properties:
@@ -824,11 +837,6 @@ components:
           type: object
           additionalProperties:
             type: string
-    AccessTokenResponseDto:
-      type: object
-      properties:
-        accessToken:
-          type: string
     PublicErrorDto:
       type: object
       properties:
