# backend/src/main/java/org/ukma/spring/crooodle/controller/RoomController.java
@@ -1,6 +1,7 @@
 package org.ukma.spring.crooodle.controller;
 
 import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.security.SecurityRequirements;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springdoc.core.annotations.ParameterObject;
@@ -14,6 +15,7 @@ import org.ukma.spring.crooodle.service.RoomService;
 
 @RestController
 @RequestMapping("/hotels/rooms")
+@SecurityRequirements
 @RequiredArgsConstructor
 public class RoomController {
 
